# licensing-server

./: CMakeLists.txt  LICENSE.md  README.md  authorization.cpp  authorization.h  client.cpp  client.h  config.h  crypto.cpp  crypto.h  database.cpp  database.h  sampleClientApp.cpp  sampleCrypto.cpp  server.cpp
lib/cppzmq/: CMakeLists.txt
lib/sqLITER/: .gitattributes  CMakeLists.txt  README.md
lib/sqLITER/docs/: design_philosophy.md  marketing.md  user_manual.md
lib/sqLITER/examples/basic/: basic.cpp
lib/sqLITER/examples/basic/bsd-project/: makefile
lib/sqLITER/examples/basic/msvs-2012-project/basic/: basic.sln  basic.vcxproj  basic.vcxproj.filters
lib/sqLITER/examples/basic/msvs-2015-project/basic/: ReadMe.txt  basic.cpp  basic.sln  basic.vcxproj  basic.vcxproj.filters
lib/sqLITER/test/: sqlitertest.cpp  sqlitertestbind.cpp  sqlitertestbind.h  sqlitertestdataaccess.cpp  sqlitertestdataaccess.h  sqlitertestfileoperations.cpp  sqlitertestfileoperations.h
lib/sqLITER/test/bsd-project/: makefile
lib/sqLITER/test/msvs-2012-project/: msvs-2012-project.sln
lib/sqLITER/test/msvs-2012-project/msvs-2012-project/: msvs-2012-project.vcxproj  msvs-2012-project.vcxproj.filters
lib/sqLITER/test/msvs-2015-project/test/: test.sln  test.vcxproj  test.vcxproj.filters
scripts/: create-db.sh  create-login.sql  create-user.sql  create-valid-ip.sql  export-env.sh  insert-testing-data.sh
